@@ -82,6 +82,7 @@ public class GlobalSettings {
 	public static ReleaseType releaseType;
 	public static int bnUserToString;
 	public static int bnUserToStringUserList;
+	public static int bnUserToStringCommandResponse;
 	
 	private static String lookAndFeel;
 	private static String lookAndFeelTheme;
@@ -210,6 +211,7 @@ public class GlobalSettings {
 		Settings.write(null, "recruitTagSuffix", recruitTagSuffix);
 		Settings.writeInt(null, "bnUserToString", bnUserToString);
 		Settings.writeInt(null, "bnUserToStringUserList", bnUserToStringUserList);
+		Settings.writeInt(null, "bnUserToStringCommandResponse", bnUserToStringCommandResponse);
 		Settings.writeEnum(null, "releaseType", releaseType);
 		Settings.writeLong(null, "triviaRoundLength", triviaRoundLength);
 		Settings.write(null, "tsFormat", TimeFormatter.tsFormat);
@@ -257,6 +259,7 @@ public class GlobalSettings {
 		TimeFormatter.tsFormat = Settings.read(null, "tsFormat", TimeFormatter.tsFormat);
 		bnUserToString = Settings.readInt(null, "bnUserToString", 3);
 		bnUserToStringUserList = Settings.readInt(null, "bnUserToStringUserList", 1);
+		bnUserToStringCommandResponse = Settings.readInt(null, "bnUserToStringCommandResponse", 4);
 		
 		// Get the release type to check for when doing version checks
 		ReleaseType currentRelease = CurrentVersion.version().getReleaseType();
